added css transitions, image, other stuff

--- a/index.html
+++ b/index.html
@@ -4,24 +4,26 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="./public/icons8-shortcake-32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Roz Townsend's Application for Backendiness Learningtimesington</title>
+    <title>Roz Townsend - Sundsgården Backend Program Application</title>
   </head>
   <body>
     <div class="grid" id="app">
       <header>
-        <h1>Roz Townsend's Backend Course Application</h1>
+        <h1>Roz Townsend</h1>
+          <div class="contact">
+            +46 072 453 0875 | <a href="mailto@rdtownsend@protonmail.com">rdtownsend@protonmail.com</a> | <a href="http://rdtownsend.neocities.org" target="_blank">rdtownsend.neocities.org</a>
+          </div>
+        </header>
         <nav id="navigationBox">
         </nav>
-      </header>
-      <main>
-        <h2 id="header"></h2>
-        <section class="content" id="content">
-          
+        <section class="bulletpoint">
+          <h2>
+            <div id="digit" class="digit"></div>
+            <div id="heading" class="heading"></div>
+          </h2>
         </section>
-      </main>
-      <footer>Contact me<br /> 
-        Phone: +46 072 453 0875 | <a href="mailto@rdtownsend@protonmail.com">rdtownsend@protonmail.com</a> | <a href="http://roztownsend.neocities.org" target="_blank">roztownsend.neocities.org</a></footer>
-    </div>
+        <section class="content" id="content">  
+        </section>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
