media queries, color and font variables

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       <header>
         <h1>Roz Townsend</h1>
           <div class="contact">
-            +46 072 453 0875 | <a href="mailto@rdtownsend@protonmail.com">rdtownsend@protonmail.com</a> | <a href="http://rdtownsend.neocities.org" target="_blank">rdtownsend.neocities.org</a>
+            +46 072 453 0875 <br />
+            <a href="mailto@rdtownsend@protonmail.com">rdtownsend@protonmail.com</a> <br />
+            <a href="http://rdtownsend.neocities.org" target="_blank">rdtownsend.neocities.org</a>
           </div>
         </header>
         <nav id="navigationBox">
